# vitejs-trunk-wasm

./: .gitignore  Cargo.toml  README.md  package.json  template.json
app/: index.ts
